# Linear-Algebra-Applications-in-Computer-Graphics-and-Multimedia-Systems

./: README.md
Project Simulation Codes/Computer Graphics/: CMakeLists.txt  main.cpp
Project Simulation Codes/Computer Graphics/Cherno/: Cherno.cpp  Cherno.h
Project Simulation Codes/Multimedia/: ConsoleApplication1.sln
Project Simulation Codes/Multimedia/ConsoleApplication1/: ConsoleApplication1.vcxproj  main.c
